<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChapterActivity">

    <TextView
        android:id="@+id/chapter_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chapter_title_placeholder_text"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start_chapter_button"
        android:layout_width="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_height="wrap_content"
        android:text="@string/start_button_placeholder_text" />

    <Button
        android:id="@+id/start_over_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/start_over_text" />

    <Button
        android:id="@+id/restart_previous_chapter_button"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:text="@string/restart_chapter_text" />
</RelativeLayout>